--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -9,10 +9,13 @@
 name: Docker Container Scan (clickhouse-server)
 
 "on":
-  # pull_request:
-  #   paths:
-  #     - docker/server/Dockerfile
-  #     - .github/workflows/anchore-analysis.yml
+  pull_request:
+    paths:
+      - docker/server/Dockerfile
+      - .github/workflows/anchore-analysis.yml
+  push:
+    branches:
+      - test
   schedule:
     - cron: '0 21 * * *'
 
