--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -39,6 +39,9 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+        run: |
+          cd docker/server
+          perl -pi -e 's|=\$version||g' Dockerfile
       - name: Log in to GitHub Docker Registry
         uses: docker/login-action@v1
         with:
