--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -39,6 +39,7 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      - name: Pre Build
         run: |
           cd docker/server
           perl -pi -e 's|=\$version||g' Dockerfile
